Fixed small card layout on mobile devices

--- a/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/ProjectSection/ProjectCard/ProjectCard.scss
@@ -20,28 +20,6 @@
   border-radius: 0.25em;
   @include transition(box-shadow 0.1s, width 0.1s)
 }
-@media only screen and (min-width: 1100px) and (orientation: portrait) {
-  .card.small {
-    .card-content {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-    }
-
-    .card-details {
-      align-self: center;
-      font-size: 1.1em;
-    }
-
-    .image-container {
-      align-self: center;
-      width: 100%;
-
-      img {
-        height: 100%;
-      }
-    }
-  }
-}
 
 .card:hover {
   padding: 1.1em 1em;
@@ -116,7 +94,48 @@ img {
   width: 75%;
 }
 
+.card.small {
+  .card-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .card-details {
+    align-self: center;
+    font-size: 1.1em;
+  }
+
+  .image-container {
+    align-self: center;
+    width: 100%;
+
+    img {
+      height: 100%;
+    }
+  }
+}
+
 @media only screen and (max-width: 1100px) and (orientation: portrait) {
+  .card.small {
+    .card-content {
+      display: flex;
+    }
+
+    .card-details {
+      align-self: center;
+      font-size: 1.1em;
+      width: 100%;
+    }
+
+    .image-container {
+      align-self: center;
+      width: 100%;
+      img {
+        height: 100%;
+      }
+    }
+  }
+
   .card {
     width: 90%;
     font-size: 3vw;
